# C-2graph

./: CMakeLists.txt  README.md  test  test.pub  yes  yes.pub
core/: Util.cuh  io.hpp  util.hpp
src/: purn-ppr.cpp  purn-sssp.cpp
src/adsorption/: run  test.cpp
src/adsorption/base/: Graph.h  PPRMain.cu  res
src/adsorption/base-1/: Graph.h  PPRMain.cu  ppr.sh  res  result  test  test.cu
src/adsorption/w-base/: Graph.h  Main.cu  Util.cuh  res
src/adsorption/w-base-perk/: DeviceMemory.cuh  Graph.h  Main.cu  PPR.cpp  ppr.sh
src/adsorption/w-c/: Graph.h  Main.cu  Util.cuh  result
src/adsorption/w-purn/: DeviceMemory.cuh  Graph.h  Main.cu  ppr.sh
src/ppr/: compress.sh  cuda_memory_allocation  filter.sh  main.cu  main.sh  out04-25-1.txt  out04-25-2.txt  out04-26-1.txt  out04-26-2.txt  test.sh
src/ppr/base/: DeviceMemory.cuh  Graph.h  Main.cu  PPRMain.cu  ppr.sh  res
src/ppr/base-StaggerPerk/: Graph.h  PPR.cpp  PPR.h  PPRMain.cu  result
src/ppr/base-perk/: DeviceMemory.cuh  Graph.h  Main.cu  PPR.cpp  PPR.h
src/ppr/base-逻辑外移/: Graph.h  PPRMain.cu  Util.cuh  ppr.sh  res  result
src/ppr/c/: a.out  deviceMemory.cuh  graph.h  main.cu  res
src/ppr/c-StaggerPerk/: DeviceMemory.cuh  Graph.h  PPR.cpp  PPR.h  PPRMain.cu  ppr.sh  result
src/ppr/c-test/: deviceMemory.cuh  graph.h  main.cu  ppr.cpp  ppr.sh  res
src/ppr/c1/: graph.h  main.cu  res
src/ppr/c1-cg/: deviceMemory.cuh  main.cu  res
src/ppr/c1-逻辑外移/: deviceMemory.cuh  main.cu  res  result
src/ppr/c2/: deviceMemory.cuh  graph.h  main.cu  res
src/ppr/purn/: DeviceMemory.cuh  Graph.h  Main.cu
src/ppr/w-base/: DeviceMemory.cuh  Main.cu  Util.cuh
src/ppr/w-base-perk/: Graph.h  Main.cu  PPR.cpp  PPR.h  Util.cuh
src/ppr/w-c/: DeviceMemory.cuh  Graph.h  Main.cu  Util.cuh
src/ppr/w-c1/: main.cu
src/ppr/w-purn/: Graph.h  Main.cu  Util.cuh  res
src/ppr/w-purn-perk/: Graph.h  Main.cu  PPR.cpp  Util.cuh
src/sssp/: compress.sh  filter.sh
src/sssp/base/: DeviceMemory.cuh  Graph.h  Main.cu  res  result  sssp.sh
src/sssp/base-perk/: Graph.h  Main.cu  SSSP.cpp  result  sssp.sh
src/sssp/basecg/: Graph.h  SSSPMain.cu  result  sssp.sh
src/sssp/basef/: Graph.h  SSSPMain.cu  result  sssp.sh
src/sssp/basef-perk/: DeviceMemory.cuh  Graph.h  Main.cu  SSSP.cpp  SSSP.h  Util.cuh
src/sssp/basew1/: Graph.h  SSSPMain.cu  Util.cuh  result  sssp.sh
src/sssp/basew1-perk/: CilkUtil.h  DeviceMemory.cuh  Graph.h  SSSP.cpp  SSSP.h  SSSPMain.cu  sssp.sh
src/sssp/c/: DeviceMemory.cuh  Graph.h  SSSPMain.cu  SSSPMain.cuvvvv  Util.cuh  result  sssp.sh  test  test.cu
src/sssp/c-cg-0714/: DeviceMemory.cuh  SSSPMain.cu  result  sssp.sh
src/sssp/c-控制内移/: DeviceMemory.cuh  SSSPMain.cu  result
src/sssp/c-控制内移-cg/: Graph.h  SSSPMain.cu  result
src/sssp/c-控制内移-四元组/: DeviceMemory.cuh  Graph.h  SSSPMain.cu  result
src/sssp/nw1/: DeviceMemory.cuh  Graph.h  SSSPMain.cu  result  sssp.sh
src/sssp/nw1-perk/: Graph.h  SSSP.cpp  SSSP.h  SSSPMain.cu  output1.txt  result  sssp.sh
src/sssp/purn/: DeviceMemory.cuh  Graph.h  Main.cu  result  sssp.sh
src/sssp/purn-perk/: DeviceMemory.cuh  Graph.h  Main.cu  SSSP.cpp  SSSP.h  Util.cuh
utils/: convert2binary.cpp  convert2binaryweight.cpp
